--- a/src/main/resources/NhaCungCap.fxml
+++ b/src/main/resources/NhaCungCap.fxml
@@ -25,7 +25,7 @@
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button fx:id="btnKhachHang" layoutY="210.0" mnemonicParsing="false" onAction="#callMenu" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách hàng">
+                        <Button fx:id="btnKhachHang" layoutY="210.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách hàng">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
@@ -37,7 +37,7 @@
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button fx:id="btnNCC" layoutY="261.0" mnemonicParsing="false" onAction="#callMenu" prefHeight="36.0" prefWidth="224.0" text="Nhà cung cấp">
+                        <Button fx:id="btnNCC" layoutY="261.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Nhà cung cấp">
                             <font>
                                 <Font size="16.0" />
                             </font>
