--- a/src/main/resources/SanPham.fxml
+++ b/src/main/resources/SanPham.fxml
@@ -22,48 +22,51 @@
             <items>
                 <AnchorPane fx:id="anchorPaneMenu" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #00A4EF;">
                     <children>
-                        <Button fx:id="btnThongKe" layoutY="57.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Thống kê">
+                        <Button fx:id="btnThongKe" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="57.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Thống kê" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button fx:id="btnKhachHang" layoutY="210.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách hàng">
+                        <Button fx:id="btnKhachHang" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="210.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách hàng" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button fx:id="btnSanPham" layoutY="159.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Sản phẩm">
+                        <Button fx:id="btnSanPham" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="159.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Sản phẩm" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button fx:id="btnNhanVien" layoutY="108.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Nhân viên">
+                        <Button fx:id="btnNhanVien" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="108.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Nhân viên" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button fx:id="btnNCC" layoutY="261.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Nhà cung cấp">
+                        <Button fx:id="btnNCC" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="261.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Nhà cung cấp" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Button>
-                        <Button fx:id="btnTacGia" layoutY="312.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tác giả">
+                        <Button fx:id="btnTacGia" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="312.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tác giả" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Button>
-                        <Button fx:id="btnHoaDon" layoutY="363.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Hóa đơn">
+                        <Button fx:id="btnHoaDon" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="363.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Hóa đơn" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Button>
-                        <Button fx:id="btnTHD" layoutY="414.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tạo hóa đơn">
+                        <Button fx:id="btnTHD" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="414.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tạo hóa đơn" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Button>
-                        <Button fx:id="btnKhuyenMai" layoutY="465.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Khuyến mãi">
+                        <Button fx:id="btnKhuyenMai" alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutY="465.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Khuyến mãi" AnchorPane.leftAnchor="0.0">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Button>
                     </children>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
@@ -106,7 +109,7 @@
                               </HBox>
                               <FlowPane prefHeight="0.0" prefWidth="354.0">
                                  <children>
-                                    <Label fx:id="labelAnhBia" prefHeight="26.0" prefWidth="47.0" text="Ảnh bìa" >
+                                    <Label fx:id="labelAnhBia" prefHeight="26.0" prefWidth="47.0" text="Ảnh bìa">
                                         <graphic>
                                             <ImageView fx:id="imgAnhBia" fitHeight="15" fitWidth="15" />
                                         </graphic>
